# s3pathlib-project

./: .coveragerc  CLAUDE.md  Makefile  README.rst  poetry-lock-hash.json  pygitrepo-config.json  pyproject.toml  pyproject_ops.json  release-history.rst  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md  i-need-help.md  report-bugs.md
.github/workflows/: iam-policy.json  main.yml
docs/source/: conf.py  index.rst
docs/source/01-Pure-S3-Path-Manipulation/: index.rst
docs/source/02-Stateless-S3-API/: index.rst
docs/source/03-Stateful-S3-API/: index.rst
docs/source/04-S3-Object-Filtering/: index.rst
docs/source/api/s3pathlib/: __init__.rst
docs/source/s3pathlib/: __init__.rst  content_type.rst
genai/: generate_knowledge_base.py  meta.json
lambda_app/: app.py
lambda_app/.chalice/: config.json
manual_tests/: log.txt  two_account_two_session.py
s3pathlib/: __init__.py  _version.py  aws.py  boto_ses.py  compat.py  core.py  iterproxy.py  utils.py  validate.py
s3pathlib/core/: opener.py
s3pathlib/tests/: __init__.py  mock.py
tests/: test_boto_ses.py  test_core_1_init.py  test_core_2_property.py  test_core_3_method.py  test_core_4_method_stateless.py  test_core_5_method_stateful.py  test_core_6_iterproxy.py  test_core_init.py  test_core_method.py  test_core_method_change_state.py  test_core_method_need_get_object.py  test_core_property.py  test_iterproxy.py  test_utils.py  test_utils_1_bucket_key_helpers.py  test_utils_2_s3_client_enhancement.py  test_utils_s3_client_enhancement.py  test_validate.py
tests/core/: test_core_bucket.py  test_core_delete.py  test_core_metadata.py  test_core_opener.py  test_core_resolve_s3_client.py  test_core_rw.py  test_core_uri.py
tests/test_iter_objects/folder3/: 8.txt
